--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -10,7 +10,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #8fbc8f;
+    background-color: darkblue;
 }
 .section {
     width: 70%;
@@ -60,6 +60,8 @@ body {
     line-height: 35px;
     text-transform: uppercase;
     font-size: 26px;
+    color: #F5F5DC;
+
 }
 form {
     padding: 1rem 0;
@@ -73,6 +75,7 @@ form {
 }
 .form-input label {
     line-height: 30px;
+    color: #F5F5DC;
 }
 .form-input input[type="text"],
 input[type="email"],
@@ -92,6 +95,7 @@ button[type="submit"] {
 }
 .form-check {
     font-size: 15px;
+    color: #F5F5DC;
 }
 .form-error {
     color: #b02323;
